@@ -1253,13 +1253,16 @@ public class Display3D extends JPanel implements Steppable
     long lastStep = -1;
     double lastTime = Schedule.BEFORE_SIMULATION;
     long lastWall = -1;  // the current time is around 1266514720569 so this should be fine (knock on wood)
-        
+    boolean updateOnce = false;
+
     /** Returns whether it's time to update. */
     public boolean shouldUpdate()
         {
         boolean val = false;
                 
-        if (updateRule == Display2D.UPDATE_RULE_ALWAYS)
+		if (updateOnce)
+        	val = true;
+        else if (updateRule == Display2D.UPDATE_RULE_ALWAYS)
             val = true;
         else if (updateRule == Display2D.UPDATE_RULE_STEPS)
             {
@@ -1284,6 +1287,9 @@ public class Display3D extends JPanel implements Steppable
             }
         // else val = false;
                 
+        // reset updateOnce
+        updateOnce = false;
+        
         return val;
         }
 
@@ -2373,6 +2379,16 @@ public class Display3D extends JPanel implements Steppable
             });
                         
         refreshPopup.addSeparator();
+
+        m = new JMenuItem("Redraw at the next step");
+        refreshPopup.add(m);
+        m.addActionListener(new ActionListener()
+            {
+            public void actionPerformed(ActionEvent e)
+                {
+                updateOnce = true;
+                }
+            });
 
         // add other menu items
         m = new JMenuItem("More Options...");
